Prometheus monitoring for Bodhi should only be enabled in staging

--- a/roles/openshift-apps/bodhi/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/bodhi/templates/deploymentconfig.yml
@@ -54,7 +54,9 @@ items:
         labels:
           app: bodhi-web
           deploymentconfig: bodhi-web
+{% if env == "staging" %}      
           monitoring-key: cpe
+{% endif %}
       spec:
         containers:
         - name: bodhi-web
