--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -54,7 +54,7 @@
     website: zabbix.fedoraproject.org
     destname: zabbix
     remotepath: /zabbix
-    proxyurl: http://zabbix01
+    proxyurl: http://localhost:10067
     when: env == "staging"
     tags: zabbix
 
