proxies: update the proxyurl for zabbix - this time to varnish
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -54,7 +54,7 @@
     website: zabbix.fedoraproject.org
     destname: zabbix
     remotepath: /zabbix
-    proxyurl: http://localhost:10068
+    proxyurl: "{{ varnish_url }}"
     when: env == "staging"
     tags: zabbix
 
