Revert "proxies: update the proxyurl for zabbix - this time to varnish"
This reverts commit 2b53aa3951310b0652d7c295353ec53bc68c6f00.

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -54,7 +54,7 @@
     website: zabbix.fedoraproject.org
     destname: zabbix
     remotepath: /zabbix
-    proxyurl: "{{ varnish_url }}"
+    proxyurl: http://localhost:10068
     when: env == "staging"
     tags: zabbix
 
