proxies: let's try keephost for zabbix
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -55,6 +55,7 @@
     destname: zabbix
     remotepath: /zabbix
     proxyurl: http://localhost:10068
+    keephost: true
     when: env == "staging"
     tags: zabbix
 
