proxies: add a trailing / for zabbix
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -53,7 +53,7 @@
   - role: httpd/reverseproxy
     website: zabbix.fedoraproject.org
     destname: zabbix
-    remotepath: /zabbix
+    remotepath: /zabbix/
     proxyurl: http://localhost:10068
     keephost: true
     when: env == "staging"
