proxies: Add the header_scheme for zabbix
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -56,6 +56,7 @@
     remotepath: /zabbix/
     proxyurl: http://localhost:10068
     keephost: true
+    header_scheme: true
     when: env == "staging"
     tags: zabbix
 
