Changed the service name and added even more permissions.

--- a/roles/openshift-apps/bodhi/files/servicemonitor.yml
+++ b/roles/openshift-apps/bodhi/files/servicemonitor.yml
@@ -3,11 +3,11 @@ kind: ServiceMonitor
 metadata:
   labels:
     monitoring-key: 'cpe'
-  name: bodhi-web
+  name: bodhi-service
 spec:
   endpoints:
     - path: /metrics
       port: web
   selector:
     matchLabels:
-      service: web
+      app: bodhi
