--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -53,7 +53,7 @@
   - role: httpd/reverseproxy
     website: zabbix.fedoraproject.org
     destname: zabbix
-    remotepath: /zabbix/
+    remotepath: /
     proxyurl: http://localhost:10068
     keephost: true
     header_scheme: true
