haproxy: fix the path where haproxy check for zabbix
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/haproxy/templates/haproxy.cfg
+++ b/roles/haproxy/templates/haproxy.cfg
@@ -493,5 +493,5 @@ frontend zabbix-frontend
 backend zabbix-backend
     balance hdr(appserver)
     server  zabbix01 zabbix01:80 check inter 10s rise 1 fall 2
-    option  httpchk GET /zabbix/
+    option  httpchk GET /
 {% endif %}
