--- a/roles/haproxy/templates/haproxy.cfg
+++ b/roles/haproxy/templates/haproxy.cfg
@@ -494,4 +494,5 @@ backend zabbix-backend
     balance hdr(appserver)
     server  zabbix01 zabbix01:80 check inter 10s rise 1 fall 2
     option  httpchk GET /
+    http-check expect status 401
 {% endif %}
