--- a/roles/haproxy/templates/haproxy.cfg
+++ b/roles/haproxy/templates/haproxy.cfg
@@ -495,4 +495,5 @@ backend zabbix-backend
     server  zabbix01 zabbix01:80 check inter 10s rise 1 fall 2
     option  httpchk GET /
     http-check expect status 401
+    http-check expect status 200
 {% endif %}
