--- a/playbooks/hosts/cloud-noc-os01.rdu-cc.fedoraproject.org.yml
+++ b/playbooks/hosts/cloud-noc-os01.rdu-cc.fedoraproject.org.yml
@@ -30,6 +30,13 @@
   - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
+  - name: install some packages which arent in playbooks
+    package:
+      state: present
+      name:
+        - nmap
+        - tcpdump
+
   - name: check if ntpd port is already known by selinux
     shell: semanage port -l | grep ntp
     register: ntp_selinux_port
