--- a/roles/haproxy/templates/haproxy.cfg
+++ b/roles/haproxy/templates/haproxy.cfg
@@ -493,6 +493,6 @@ frontend zabbix-frontend
 backend zabbix-backend
     balance hdr(appserver)
     server  zabbix01 zabbix01:80 check inter 10s rise 1 fall 2
-    option  httpchk GET /
-    http-check expect status 200,401,302
+#    option  httpchk GET /
+#    http-check expect status 200,401,302
 {% endif %}
