retrace: oops, its home
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/abrt/retrace-pre/tasks/main.yml
+++ b/roles/abrt/retrace-pre/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # create uid - this is normaly done by retrace package
 # but the package is not installed yet at this momement
-- user: name="retrace" group=retrace uid=174 homedir=/srv/retrace/home
+- user: name="retrace" group=retrace uid=174 home=/srv/retrace/home
 
 - file:
     path: /srv/retrace/repos
