General cleanup of aliases and add mobrien to various places. Remove old smooge lines Remove centos box which is no longer existant.
Signed-off-by: Stephen Smoogen <smooge@smoogespace.com>

--- a/playbooks/groups/os-cluster.yml
+++ b/playbooks/groups/os-cluster.yml
@@ -227,6 +227,7 @@
       - kevin
       - codeblock
       - smooge
+      - mobrien
       changed_when: false
     - name: Set all app owners to have cluster-monitoring-view
       command: oadm policy add-cluster-role-to-user cluster-monitoring-view {{item}}
