--- a/roles/batcave/tasks/main.yml
+++ b/roles/batcave/tasks/main.yml
@@ -37,7 +37,7 @@
   - python-GeoIP              # Needed for geoip scripts
   - python-fedmsg-fasclient   # fasClient fedmsg job
   - bind                      # named-checkzone for dns repo
-  - emacs-nox                 # because smooge is weak
+  - emacs-nox                 
   - rpm-sign                  # for the sign-and-import playbook
   - createrepo                # for the sign-and-import playbook
   - unzip                     # general useful util
@@ -69,7 +69,7 @@
   - ostree                    # Needed for rhn sync
   - python2-sqlalchemy         # Needed for repo2json
   - bind                      # named-checkzone for dns repo
-  - emacs-nox                 # because smooge is weak
+  - emacs-nox                 
   - rpm-sign                  # for the sign-and-import playbook
   - createrepo                # for the sign-and-import playbook
   - unzip                     # general useful util
