--- a/roles/pagure/templates/pagure.cfg
+++ b/roles/pagure/templates/pagure.cfg
@@ -32,7 +32,7 @@ DB_URL = 'postgresql://{{ pagure_db_user }}:{{ pagure_db_pass }}@{{ pagure_db_ho
 
 ### The FAS group in which the admin of pagure are
 ADMIN_GROUP = None
-PAGURE_ADMIN_USERS = ["pingou", "kevin", "smooge"]
+PAGURE_ADMIN_USERS = ["pingou", "kevin", "smooge", "mobrien"]
 
 # The publicly visible admin email address
 ADMIN_EMAIL = 'admin@fedoraproject.org'
