--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -215,7 +215,7 @@ security: security-private@lists.fedoraproject.org
 secalert: security-private@lists.fedoraproject.org
 
 # Infrastructure security officer
-infra-security: puiterwijk,kevin,smooge,codeblock
+infra-security: puiterwijk,kevin,smooge,codeblock,mobrien
 
 webmaster: websites@lists.fedoraproject.org
 logo: rlerch@redhat.com,duffy@redhat.com
@@ -224,11 +224,11 @@ podcast: x3mboy,computerkid,riecatnor
 
 # Misc Aliases
 cvs-access: accounts
-ftpsync: kevin,smooge
+ftpsync: kevin,smooge,mobrien
 # Used for openshift census instance
 census: npmccallum,kevin,ianweller,tflink
 # User for openshift fedora-status instance
-fedora-status: kevin,codeblock
+fedora-status: kevin,codeblock,mobrien
 # User for openshift fedora magazine wordpress instance.
 fedora-mag-admin: kevin,duffy,chrisroberts,mitzie,jzb,nb
 endoflife: triage@lists.fedoraproject.org
