--- a/playbooks/groups/ipa.yml
+++ b/playbooks/groups/ipa.yml
@@ -16,8 +16,7 @@
   - nagios_client
   - collectd/base
   - hosts
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - rsyncd
   - sudo
   - { role: openvpn/client,
@@ -27,8 +26,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != 'staging'
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
