--- a/playbooks/groups/sign-bridge.yml
+++ b/playbooks/groups/sign-bridge.yml
@@ -22,8 +22,7 @@
   - base
   - rkhunter
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - sudo
   - nagios_client
   - sigul/bridge
@@ -37,8 +36,6 @@
 
   tasks:
   - import_tasks: "{{ tasks_path }}/motd.yml"
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
 
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
