--- a/playbooks/groups/dns.yml
+++ b/playbooks/groups/dns.yml
@@ -17,8 +17,7 @@
   - hosts
   - rkhunter
   - nagios_client
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - collectd/bind
   - rsyncd
@@ -31,7 +30,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
