--- a/playbooks/groups/torrent.yml
+++ b/playbooks/groups/torrent.yml
@@ -15,8 +15,7 @@
   - hosts
   - rkhunter
   - nagios_client
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - rsyncd
   - sudo
@@ -36,7 +35,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
