ipa/client: enable for dbserver in prod
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/playbooks/groups/mariadb-server.yml
+++ b/playbooks/groups/mariadb-server.yml
@@ -19,8 +19,7 @@
   roles:
   - base
   - rkhunter
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - nagios_client
   - hosts
   - mariadb_server
@@ -31,8 +30,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
 # TODO: add iscsi task
