--- a/playbooks/groups/logserver.yml
+++ b/playbooks/groups/logserver.yml
@@ -15,8 +15,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - apache
   - collectd/base
   - collectd/server
@@ -36,7 +35,6 @@
 
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
 #
