--- a/playbooks/groups/mailman.yml
+++ b/playbooks/groups/mailman.yml
@@ -19,8 +19,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - sudo
   - { role: openvpn/client,
@@ -33,7 +32,6 @@
 
   tasks:
   # this is how you include other task lists
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
