--- a/playbooks/groups/notifs-web.yml
+++ b/playbooks/groups/notifs-web.yml
@@ -20,7 +20,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - fas_client
+  - ipa/client
   - collectd/base
   - mod_wsgi
   - role: fedmsg/base
@@ -36,7 +36,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
