--- a/playbooks/groups/nfs-servers.yml
+++ b/playbooks/groups/nfs-servers.yml
@@ -17,14 +17,12 @@
   - base
   - rkhunter
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - nagios_client
   - collectd/base
   - sudo
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
