--- a/playbooks/groups/koji-hub.yml
+++ b/playbooks/groups/koji-hub.yml
@@ -27,8 +27,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - collectd/base
   - apache
   - role: keytab/service
@@ -121,8 +120,6 @@
     username: "koji{{ env_suffix }}"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
