--- a/playbooks/groups/backup-server.yml
+++ b/playbooks/groups/backup-server.yml
@@ -18,8 +18,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: hosts, when: env != "staging" }
+  - ipa/client
   - sudo
   - collectd/base
   - { role: nfs/client,
@@ -33,7 +32,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
   - import_tasks: "{{ tasks_path }}/rdiff_backup_server.yml"
 
