--- a/playbooks/groups/wiki.yml
+++ b/playbooks/groups/wiki.yml
@@ -23,8 +23,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - apache
   - fedmsg/base
@@ -39,8 +38,6 @@
       when: env != "staging" }
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
