--- a/playbooks/groups/noc.yml
+++ b/playbooks/groups/noc.yml
@@ -19,8 +19,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - { role: rsyncd, when: datacenter == 'iad2' }
   - sudo
@@ -41,7 +40,6 @@
   - { role: letsencrypt, site_name: 'nagios-external.fedoraproject.org', when: inventory_hostname.startswith('noc02') }
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
