--- a/playbooks/groups/retrace.yml
+++ b/playbooks/groups/retrace.yml
@@ -64,14 +64,12 @@
   tasks:
     - import_role: name=base
     - import_role: name=hosts
-    - { import_role: name=ipa/client, when: env == "staging" }
-    - { import_role: name=fas_client, when: env != "staging" }
+    - import_role: name=ipa/client
     - import_role: name=rkhunter
     - import_role: name=nagios_client
     - import_role: name=openvpn/client
     - import_role: name=sudo
 
-    - import_tasks: "{{ tasks_path }}/2fa_client.yml"
     - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
