--- a/playbooks/groups/pdc.yml
+++ b/playbooks/groups/pdc.yml
@@ -22,13 +22,10 @@
   - nagios_client
   - collectd/base
   - hosts
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - sudo
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
 - name: stuff for the web nodes
