--- a/playbooks/groups/pkgs.yml
+++ b/playbooks/groups/pkgs.yml
@@ -15,8 +15,7 @@
   - hosts
   - rkhunter
   - nagios_client
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - collectd/base
   - sudo
   - apache
@@ -31,8 +30,6 @@
 
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
 
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
