--- a/playbooks/groups/zabbix.yml
+++ b/playbooks/groups/zabbix.yml
@@ -14,8 +14,7 @@
   - base
   - rkhunter
   - hosts
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - role: keytab/service
     owner_user: apache
     owner_group: apache
