ipa/client: enable for builders in prod
Also, revise special treatment for bkernel*, the `ipa/client` role
grants shell, sudo access for sysadmin-main by default, just ensure the
lists for additional groups are empty.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/playbooks/groups/buildhw.yml
+++ b/playbooks/groups/buildhw.yml
@@ -62,8 +62,7 @@
   - { role: clevis, when: "inventory_hostname.startswith(('bkernel', 'buildhw-x86'))" }
   - { role: serial-console, when: inventory_hostname.startswith('bkernel') }
   - hosts
-  - { role: ipa/client, when: not inventory_hostname.startswith('bkernel') and env == "staging" }
-  - { role: fas_client, when: not inventory_hostname.startswith('bkernel') and env != "staging" }
+  - ipa/client
   - { role: sudo, when: not inventory_hostname.startswith('bkernel') }
   - role: keytab/service
     kt_location: /etc/kojid/kojid.keytab
@@ -77,8 +76,6 @@
     when: env == "staging"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: not inventory_hostname.startswith('bkernel')
   - import_tasks: "{{ tasks_path }}/motd.yml"
     when: not inventory_hostname.startswith('bkernel')
 
