--- a/playbooks/groups/buildvm.yml
+++ b/playbooks/groups/buildvm.yml
@@ -22,15 +22,13 @@
   roles:
     - base
     - hosts
-    - { role: ipa/client, when: env == "staging" }
     - {
         role: nfs/client,
         mnt_dir: "/mnt/fedora_koji",
         nfs_src_dir: "{{ koji_hub_nfs }}",
         when: "env == 'staging' or createrepo or 'runroot' in group_names and not inventory_hostname.startswith('buildvm-s390x')",
       }
-    - { role: ipa/client, when: not inventory_hostname.startswith('bkernel') and env == "staging" }
-    - { role: fas_client, when: not inventory_hostname.startswith('bkernel') and env == 'production' }
+    - ipa/client
     - { role: sudo, when: not inventory_hostname.startswith('bkernel') and env == 'production' }
     - koji_builder
     - role: nfs/client
@@ -87,8 +85,6 @@
       when: env == "staging"
 
   tasks:
-    - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-      when: not inventory_hostname.startswith('bkernel') and env == 'production'
     - import_tasks: "{{ tasks_path }}/motd.yml"
       when: not inventory_hostname.startswith('bkernel') and env == 'production'
 
