--- a/playbooks/groups/osbs-cluster.yml
+++ b/playbooks/groups/osbs-cluster.yml
@@ -24,7 +24,7 @@
     - rkhunter
     - nagios_client
     - hosts
-    - { role: fas_client, when: env != "staging" }
+    - ipa/client
     - sudo
     - collectd/base
     - rsyncd
@@ -40,8 +40,6 @@
       package:
          name: subscription-manager-rhsm-certificates
          state: present
-    - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-      when: env != "staging"
     - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
