--- a/playbooks/groups/osbs/deploy-cluster.yml
+++ b/playbooks/groups/osbs/deploy-cluster.yml
@@ -27,8 +27,7 @@
     - rkhunter
     - nagios_client
     - hosts
-    - { role: ipa/client, when: env == "staging" }
-    - { role: fas_client, when: env != "staging" }
+    - ipa/client
     - sudo
     - collectd/base
     - rsyncd
@@ -44,8 +43,6 @@
       package:
          name: subscription-manager-rhsm-certificates
          state: present
-    - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-      when: env != "staging"
     - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
