--- a/playbooks/groups/packages.yml
+++ b/playbooks/groups/packages.yml
@@ -23,8 +23,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - rsyncd
   - sudo
@@ -33,7 +32,6 @@
   - mod_wsgi
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
