--- a/playbooks/groups/sundries.yml
+++ b/playbooks/groups/sundries.yml
@@ -20,8 +20,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - mod_wsgi
   - geoip
@@ -79,8 +78,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
   - import_tasks: "{{ tasks_path }}/reg-server.yml"
 
