--- a/playbooks/groups/batcave.yml
+++ b/playbooks/groups/batcave.yml
@@ -15,8 +15,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - ansible-server
   - sudo
   - collectd/base
@@ -66,7 +65,6 @@
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
