--- a/playbooks/groups/resultsdb.yml
+++ b/playbooks/groups/resultsdb.yml
@@ -23,8 +23,7 @@
    - { role: rkhunter, tags: ['rkhunter'] }
    - { role: nagios_client, tags: ['nagios_client'] }
    - { role: hosts, tags: ['hosts']}
-   - { role: fas_client, when: env != "staging", tags: ['fas_client'] }
-   - { role: ipa/client, when: env == "staging", tags: ['ipa/client'] }
+   - ipa/client
    - { role: collectd/base, tags: ['collectd_base'] }
    - { role: sudo, tags: ['sudo'] }
    - { role: openvpn/client,
@@ -74,8 +73,6 @@
 
   tasks:
   # this is how you include other task lists
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
