--- a/playbooks/groups/releng-compose.yml
+++ b/playbooks/groups/releng-compose.yml
@@ -23,8 +23,7 @@
   roles:
   - base
   - hosts
-  - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }
+  - ipa/client
   - rkhunter
   - nagios_client
   - collectd/base
@@ -159,8 +158,6 @@
 
   tasks:
   # this is how you include other task lists
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   - name: install skopeo for container management
