--- a/playbooks/groups/os-cluster.yml
+++ b/playbooks/groups/os-cluster.yml
@@ -16,8 +16,7 @@
     - rkhunter
     - nagios_client
     - hosts
-    - { role: fas_client, when: env != 'staging' }
-    - { role: ipa/client, when: env == "staging" }
+    - ipa/client
     - collectd/base
     - rsyncd
     - sudo
@@ -47,8 +46,6 @@
          state: present
 
     - import_tasks: "{{ tasks_path }}/yumrepos.yml"
-    - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-      when: env != 'staging'
     - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
