--- a/playbooks/groups/os-proxies.yml
+++ b/playbooks/groups/os-proxies.yml
@@ -18,8 +18,7 @@
 
   roles:
   - base
-  - { role: ipa/client, when: env == "staging" }
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - rkhunter
   - nagios_client
   - collectd/base
@@ -27,7 +26,6 @@
   - keepalived
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   - name: install haproxy
