debuginfod: almost ready for -stg
- changed deploymentconfig to a template, to adapt to stg-sensitive PV name
- tweaked debuginfod command line
  - to match expected PV mount points
  - to reduce verbosity
  - to specify scanning parallelism
- specified a requested cpu (8) & ram (24GB) allocation

--- a/playbooks/openshift-apps/debuginfod.yml
+++ b/playbooks/openshift-apps/debuginfod.yml
@@ -36,11 +36,6 @@
 
   - role: openshift/object
     app: debuginfod
-    file: deploymentconfig.yml
-    objectname: deploymentconfig.yml
-
-  - role: openshift/object
-    app: debuginfod
     file: storage.yml
     objectname: storage.yml
 
@@ -55,3 +50,8 @@
     app: debuginfod
     buildname: debuginfod-build
     objectname: debuginfod-build
+
+  - role: openshift/object
+    app: debuginfod
+    template: deploymentconfig.yml
+    objectname: deploymentconfig.yml
