--- a/roles/openshift-apps/debuginfod/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/debuginfod/templates/deploymentconfig.yml
@@ -25,22 +25,26 @@ spec:
       - name: debuginfod
         image: debuginfod:latest
         command: ["/usr/bin/debuginfod",
-                  "-vvvvv",
-                  "-d", "/tmp/db.sqlite",
+                  "-vvv",
+                  "-d", "/var/cache/debuginfod/db.sqlite",
+                  "-c", "8",
                   "-t", "3600",
                   "-g", "604800",
-                  "-R", "/mnt",
-                  "-I", "zsh.*\\.fc(30|31|32|33|34|35)\\..*\\.rpm$"]
+                  # exclude signed etc. variants, just want original RPMs
+                  "-X", "/data/",
+                  "-R", "/mnt/koji/packages",
+                  "-I", "\\.fc(30|31|32|33|34|35)\\..*\\.rpm$"]
         ports:
         - containerPort: 8002
         resources:
           requests:
-            memory: 1000Mi
+            memory: 24000Mi
+            cpu: 8000m
         volumeMounts:
-         - name: debuginfod-volume
+         - name: debuginfod-volume{{ '-stg' if env == 'staging' else '' }}
            mountPath: /var/cache/debuginfod
            readOnly: false
-         - name: koji-volume
+         - name: fedora-koji
            mountPath: /mnt
            readOnly: true
         readinessProbe:
