debuginfod: typo fix on PV storage name

--- a/roles/openshift-apps/debuginfod/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/debuginfod/templates/deploymentconfig.yml
@@ -41,7 +41,7 @@ spec:
             memory: 24000Mi
             cpu: 8000m
         volumeMounts:
-         - name: debuginfod-volume{{ '-stg' if env == 'staging' else '' }}
+         - name: debuginfod-storage{{ '-stg' if env == 'staging' else '' }}
            mountPath: /var/cache/debuginfod
            readOnly: false
          - name: fedora-koji
