--- a/playbooks/openshift-apps/debuginfod.yml
+++ b/playbooks/openshift-apps/debuginfod.yml
@@ -36,7 +36,7 @@
 
   - role: openshift/object
     app: debuginfod
-    file: storage.yml
+    template: storage.yml
     objectname: storage.yml
 
   - role: openshift/route
