--- a/playbooks/manual/autosign.yml
+++ b/playbooks/manual/autosign.yml
@@ -22,7 +22,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - { role: fas_client, when: env != "staging" }
+  - ipa/client
   - collectd/base
   - sudo
   - role: nfs/client
@@ -81,8 +81,6 @@
 
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
-    when: env != "staging"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
