--- a/playbooks/manual/kernel-qa.yml
+++ b/playbooks/manual/kernel-qa.yml
@@ -16,12 +16,11 @@
   - base
   - rkhunter
   - nagios_client
-  - fas_client
+  - ipa/client
   - sudo
   - hosts
 
   tasks:
-  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
   - import_tasks: "{{ tasks_path }}/motd.yml"
 
 
