--- a/playbooks/openshift-apps/fasjson.yml
+++ b/playbooks/openshift-apps/fasjson.yml
@@ -17,6 +17,9 @@
     appowners:
     - abompard
     - pingou
+    - nils
+    - ryanlerch
+    - scoady
     tags:
       - apply-appowners
     when: env == "production"
