--- a/playbooks/openshift-apps/noggin-centos.yml
+++ b/playbooks/openshift-apps/noggin-centos.yml
@@ -20,6 +20,9 @@
     appowners:
     - abompard
     - pingou
+    - nils
+    - ryanlerch
+    - scoady
     tags:
       - apply-appowners
     when: env == "production"
