--- a/roles/copr/frontend-cloud/templates/copr.conf
+++ b/roles/copr/frontend-cloud/templates/copr.conf
@@ -5,7 +5,10 @@ ENV="{% if devel %}devel{% else %}{{ env }}{% endif %}"
 # Directory and files where is stored Copr database files
 DATA_DIR = '/var/lib/copr/data'
 DATABASE = '/var/lib/copr/data/copr.db'
+
+OPENID_PROVIDER_URL = "https://id{% if devel %}.stg{% endif %}.fedoraproject.org"
 OPENID_STORE = '/var/lib/copr/data/openid_store'
+
 WHOOSHEE_DIR = '/var/lib/copr/data/whooshee'
 WHOOSHEE_MIN_STRING_LEN = 2
 WHOOSHEE_WRITER_TIMEOUT = 10
