--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -223,7 +223,7 @@
     proxyurl: http://localhost:10020
     keephost: true
     tags:
-    - id.fedoraproject.org
+    - sso.fedoraproject.org
     when: env == "staging"
 
   - role: httpd/reverseproxy
