--- a/roles/ipsilon/templates/configmap.yml
+++ b/roles/ipsilon/templates/configmap.yml
@@ -94,9 +94,9 @@ data:
     CoreDumpDirectory /tmp
 
     # Ipsilon stuff
-    {{ load_file('httpd.conf.production.j2') | indent() }}
+    {{ load_file('httpd.conf.j2') | indent() }}
   ipsilon.conf: |-
-    {{ load_file('ipsilon.conf.production') | indent() }}
+    {{ load_file('ipsilon.conf') | indent() }}
   configuration.conf: |-
     {{ load_file('configuration.conf') | indent() }}
   openidc.static.cfg: |-
