Add code-of-conduct alias pointing to fpl+fcaic, sync changes to fasjson/files/aliases.static

--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -161,6 +161,9 @@ chair: mattdm
 ## https://docs.fedoraproject.org/en-US/council/fcaic/
 fcaic: riecatnor
 
+# Code of Conduct
+code-of-conduct: fpl,fcaic
+
 ## Fedora Program Manager
 ## https://docs.fedoraproject.org/en-US/council/fpgm/
 fpgm: bcotton
