Actually it was requested to be codeofconduct@

--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -162,7 +162,7 @@ chair: mattdm
 fcaic: riecatnor
 
 # Code of Conduct
-code-of-conduct: fpl,fcaic
+codeofconduct: fpl,fcaic
 
 ## Fedora Program Manager
 ## https://docs.fedoraproject.org/en-US/council/fpgm/
