--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -281,10 +281,14 @@
     cert_name: "{{wildcard_cert_name}}"
 
   - role: httpd/website
+    site_name: "accounts{{ env_suffix }}.fedoraproject.org"
+    sslonly: true
+    cert_name: "{{wildcard_cert_name}}"
+
+  - role: httpd/website
     site_name: "fasjson{{ env_suffix }}.fedoraproject.org"
     sslonly: true
     cert_name: "{{wildcard_cert_name}}"
-    when: env == "staging"
 
   - role: httpd/website
     site_name: "coreos{{ env_suffix }}.fedoraproject.org"
