proxies: Update config for debuginfod in staging
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -782,3 +782,13 @@
     when: env == "staging"
     tags:
     - languages
+
+  - role: httpd/reverseproxy
+    website: debuginfod.fedoraproject.org
+    destname: debuginfod
+    balancer_name: app-os
+    targettype: openshift
+    keephost: true
+    when: env == "staging"
+    tags: debuginfod
+
