Revert "Revert "Disable prerelease redirects""
This reverts commit ad55b9ddc87bb0d4284d1a1fd3b3f4812c861b29.

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -322,7 +322,7 @@
     website: labs.fedoraproject.org
     regex: /(.*)prerelease.*$
     target: https://labs.stg.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -330,7 +330,7 @@
     website: spins.fedoraproject.org
     regex: /(.*)prerelease.*$
     target: https://spins.stg.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -338,7 +338,7 @@
     website: arm.fedoraproject.org
     regex: /(.*)prerelease.*$
     target: https://arm.stg.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -346,7 +346,7 @@
     website: labs.fedoraproject.org
     regex: /prerelease.*$
     target: https://labs.stg.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -354,7 +354,7 @@
     website: spins.fedoraproject.org
     regex: /prerelease.*$
     target: https://spins.stg.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -362,7 +362,7 @@
     website: arm.fedoraproject.org
     regex: /prerelease.*$
     target: https://arm.stg.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -396,7 +396,7 @@
     website: labs.fedoraproject.org
     regex: /(.*)/prerelease.*$
     target: https://labs.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -404,7 +404,7 @@
     website: spins.fedoraproject.org
     regex: /(.*)/prerelease.*$
     target: https://spins.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -412,7 +412,7 @@
     website: arm.fedoraproject.org
     regex: /(.*)/prerelease.*$
     target: https://arm.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -420,7 +420,7 @@
     website: labs.fedoraproject.org
     regex: /prerelease.*$
     target: https://labs.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -428,7 +428,7 @@
     website: spins.fedoraproject.org
     regex: /prerelease.*$
     target: https://spins.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -436,7 +436,7 @@
     website: arm.fedoraproject.org
     regex: /prerelease.*$
     target: https://arm.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -444,7 +444,7 @@
     website: alt.fedoraproject.org
     regex: /prerelease.*$
     target: https://alt.fedoraproject.org/$1
-    redirectmatch_enabled: true
+    redirectmatch_enabled: false
     when: env != 'staging'
 
 # end of prod prerelease
