create daily data only backups of ipa

--- a/roles/ipa/server/tasks/main.yml
+++ b/roles/ipa/server/tasks/main.yml
@@ -623,3 +623,10 @@
   tags:
   - ipa/server
   - config
+
+
+- name: Set cron for daily data only backups
+  copy:
+    src: data-only-backup
+    dest: "/etc/cron.d/data-only-backup"
+
