Apply openvpn/client role before ipa/client
This is so hosts on the Fedora VPN are able to talk to IPA before they
try to enroll.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/playbooks/groups/batcave.yml
+++ b/playbooks/groups/batcave.yml
@@ -15,6 +15,7 @@
   - rkhunter
   - nagios_client
   - hosts
+  - openvpn/client
   - ipa/client
   - ansible-server
   - sudo
@@ -32,7 +33,6 @@
   - role: httpd/certificate
     certname: "{{wildcard_cert_name}}"
     SSLCertificateChainFile: "{{wildcard_int_file}}"
-  - role: openvpn/client
   - role: rabbit/user
     username: "mirror_pagure_ansible{{ env_suffix }}"
   - role: rabbit/user
