--- a/playbooks/groups/mbs.yml
+++ b/playbooks/groups/mbs.yml
@@ -18,6 +18,8 @@
   - rkhunter
   - nagios_client
   - hosts
+  # openvpn on the prod frontend nodes
+  - { role: openvpn/client, when: "'mbs_frontend' in group_names and datacenter == 'iad2'" }
   - ipa/client
   - rsyncd
   - sudo
@@ -25,22 +27,6 @@
 
   tasks:
   - import_tasks: "{{ tasks_path }}/motd.yml"
-
-  handlers:
-  - import_tasks: "{{ handlers_path }}/restart_services.yml"
-
-- name: openvpn on the prod frontend nodes
-  hosts: mbs_frontend
-  user: root
-  gather_facts: True
-
-  vars_files:
-   - /srv/web/infra/ansible/vars/global.yml
-   - "/srv/private/ansible/vars.yml"
-   - "{{ vars_path }}/{{ ansible_distribution }}.yml"
-
-  roles:
-  - { role: openvpn/client, when: datacenter == 'iad2' }
 
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
