--- a/playbooks/groups/odcs.yml
+++ b/playbooks/groups/odcs.yml
@@ -18,6 +18,8 @@
   - rkhunter
   - nagios_client
   - hosts
+  # openvpn on the prod frontend nodes
+  #- { role: openvpn/client, when: "'odcs_frontend' in group_names" }
   - ipa/client
   - rsyncd
   - sudo
@@ -28,22 +30,6 @@
 
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
-
-#- name: openvpn on the prod frontend nodes
-#  hosts: odcs_frontend
-#  user: root
-#  gather_facts: True
-#
-#  vars_files:
-#   - /srv/web/infra/ansible/vars/global.yml
-#   - "/srv/private/ansible/vars.yml"
-#   - "{{ vars_path }}/{{ ansible_distribution }}.yml"
-#
-#  roles:
-#  - openvpn/client
-#
-#  handlers:
-#  - import_tasks: "{{ handlers_path }}/restart_services.yml"
 
 - name: Set up odcs frontend service
   hosts: odcs_frontend:odcs_frontend_stg
