--- a/playbooks/manual/noggin-deployment/fix-home-fedora-ownerships.yml
+++ b/playbooks/manual/noggin-deployment/fix-home-fedora-ownerships.yml
@@ -17,9 +17,10 @@
 
   - name: Copy the script to the host
     copy:
-      src: scripts/fix-home-fedora-ownerships.sh
+      src: "{{ files }}/scripts/fix-home-fedora-ownerships.sh"
       dest: /usr/local/sbin/fix-home-fedora-ownerships.sh
       mode: 0755
+    changed_when: false
     when: home_fedora_res.stat.isdir
 
   - name: Fix ownership of home directories in /home/fedora
@@ -35,4 +36,5 @@
     file:
       path: /usr/local/sbin/fix-home-fedora-ownerships.sh
       state: absent
+    changed_when: false
     when: home_fedora_res.stat.isdir
